notes-bg-fixes (parent:overflow)

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -34,6 +34,7 @@ body
 	padding: 0
 	/* max-width: 990px */
 	margin: 0 auto
+	overflow: hidden
 .row
 	margin: 0
 section
@@ -50,13 +51,13 @@ section
 	background-size: cover
 	position: relative
 	padding-top: 0
-	.note-img
-		background: url(../img/not.png) no-repeat 35px -456px
-		background-size: 150%
+	.notes
 		position: absolute
-		height: 690px
-		width: 225px
-		right: 0
+		width: 30%
+		overflow: hidden
+		margin-left: 80%
+		margin-top: -40%
+
 	.visit-box
 		text-transform: uppercase
 		text-align: left
